@@ -434,34 +434,4 @@ class TestCase::Net::SSLeay::SSL_CTX {
     return 1;
   }
   
-  static method set_next_proto_select_cb_with_protocols : int () {
-    
-    {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->TLS_method;
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-      
-      my $protocols = ["spdy/1", "http/1.1"];
-      
-      $ssl_ctx->set_next_proto_select_cb_with_protocols($protocols);
-    }
-    
-    return 1;
-  }
-  
-  static method set_next_protos_advertised_cb_with_protocols : int () {
-    
-    {
-      my $ssl_method = Net::SSLeay::SSL_METHOD->TLS_method;
-      
-      my $ssl_ctx = Net::SSLeay::SSL_CTX->new($ssl_method);
-      
-      my $protocols = ["spdy/1", "http/1.1"];
-      
-      $ssl_ctx->set_next_protos_advertised_cb_with_protocols($protocols);
-    }
-    
-    return 1;
-  }
-  
 }
